--- a/Project-ฝึกงาน/Landing Page.html
+++ b/Project-ฝึกงาน/Landing Page.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="./Landing Page.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/zqNEWiGA_SogqqQHNW0R2w3s5BcvHxc80GjZ_qbMIY3elmKw6WMUzAzmbjwQFUzq__s" type="image/x-icon">
 </head>
 <body>
     <div class="container-content">
@@ -42,69 +42,100 @@
         </div>
         <nav class="top-bar">
             <div class="bar-left">
-                <a class="mr-2xl" href="#">
-                    <img alt="logo" height="28px" src="https://ast.kaidee.com/blackpearl/_static/images/shared/logos/kaidee-caro.svg" width="94px" class="logo-bar">
+                <a class="logo-kaidee" href="./Landing Page.html">
+                <img alt="logo" height="28px" src="https://ast.kaidee.com/blackpearl/_static/images/shared/logos/kaidee-caro.svg" width="94px">
                 </a>
-                <a href="#" class="logo-bar-text">บทความ</a>
+                <a class="text-kaidee" href="#">บทความ</a>
             </div>
-            <div class="bar-right">
+            <div class="bar-right-kaidee">
                 <div class="icon">
                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                     <a href=""><i class="fa-regular fa-message"></i></a>
                 </div>
                 <div class="login">
-                    <a href="">เข้าสู่ระบบ / สมัครสมาชิก</a>
+                    <a href="#" class="login-btn">เข้าสู่ระบบ / สมัครสมาชิก</a>
                 </div>
                 <button>ลงขาย</button>
             </div>
         </nav>
+    </div>
 
-        <div class="container-sh">
-            <input type="text">
-            <button type="submit"><i class="fa fa-search"></i></button>
-        </div>
+    <div class="container-sh">
+        <input type="text" class="sidebar-search" placeholder="คุณกำลังมองหาอะไรอยู่ ?">
+        <i class="fa fa-search"></i>
+    </div>
 
+    <div class="container-content">
         <div class="slideshow-container">
-            <div class="mySlides">
-                <div class="numbertext">1 / 3</div>
-                <img src="" alt="">
-                <div class="text"></div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/250821-End-of-Month-Sale_KD-Homepage_website-hero-banner-.jpg" width="100%">
             </div>
 
-            <div class="mySlides">
-                <div class="numbertext">2 / 3</div>
-                <img src="" alt="">
-                <div class="text"></div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/4992502.jpg" width="100%">
             </div>
 
-            <div class="mySlides">
-                <div class="numbertext">3 / 3</div>
-                <img src="" alt="">
-                <div class="text"></div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/14636912.jpg" width="100%">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/5030171.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/2519988.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/5302721.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/2039685.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/14707621.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/9480665.jpg" width="100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="https://str.cdn.kaidee.com/250702_e_KYC_KD_Homepage3_21f4001873.jpg" width="100%">
             </div>
             
-            <a href=""  class="prev" onclick="plusSlides(-1)">❮</a>
-            <a href=""  class="next" onclick="plusSlides(1)">❯</a>
+            <a href="#"  class="prev" onclick="plusSlides(-1)">❮</a>
+            <a href="#"  class="next" onclick="plusSlides(1)">❯</a>
         </div>
 
-        <div class="">
+        <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
+            <span class="dot" onclick="currentSlide(9)"></span>
+            <span class="dot" onclick="currentSlide(10)"></span>
         </div>
 
         <div class="container-p">
             <p>รวมสินค้า Dee ทั่วไทย ครบครันและหลากหลายที่สุดของประเทศ</p>
         </div>
         <div class="img-items">
-            <a href=""><img src="" alt="">รถมือสอง</a>
-            <a href=""><img src="" alt="">มอเตอร์ไซต์</a>
-            <a href=""><img src="" alt="">พระเครื่อง</a>
-            <a href=""><img src="" alt="">มือถือ แท็บแล็ต</a>
-            <a href=""><img src="" alt="">คอนโด</a>
-            <a href=""><img src="" alt="">บ้านมือสอง</a>
-            <a href=""><img src="" alt="">ทาวน์เฮ้าส์</a>
-            <a href=""><img src="" alt="">อสังหาริมทรัพย์</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/cate_autos_3x_2778048696.png" class="icon-items" href="" alt="">รถมือสอง</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/cate_motorcycle_3x_b3ba2893e4.png" class="icon-items" href="" alt="">มอเตอร์ไซต์</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/category_amulet_ab94439212.png" class="icon-items" href="" alt="">พระเครื่อง</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/cate_mobiletablet_3x_0fed28334e.png" class="icon-items" href="" alt="">มือถือ แท็บแล็ต</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/condo_3d248568de.png" class="icon-items" href="" alt="">คอนโด</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/usedhome_e9fd5e080a.png" class="icon-items" href="" alt="">บ้านมือสอง</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/townhouse_58941742d1.png" class="icon-items" href="" alt="">ทาวน์เฮ้าส์</a>
+            <a href=""><img src="https://str.cdn.kaidee.com/cate_property_3x_ed4d87b39a.png" class="icon-items" href="" alt="">อสังหาริมทรัพย์</a>
+        </div>
+
+        <div class="option">
+            <button class="option-items">ดูทั้งหมด (35 หมวดหมู่)
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill="#555555"><path d="M19.81 8.25a.75.75 0 0 0-1.06-.06L12 14.24 5.25 8.19a.75.75 0 0 0-1.06.06.76.76 0 0 0 .06 1.06l7.25 6.5a.75.75 0 0 0 1 0l7.25-6.5a.75.75 0 0 0 .06-1.06Z"></path></svg>
+            </button>
         </div>
 
         <div class="container-footer">
@@ -112,12 +143,27 @@
                 <h3>ประกาศล่าสุด ในหมวดหมู่ มือถือ แท็บแล็ต</h3>
                 <a href="#">ดูทั้งหมด ❯</a>
             </div>
-            <div class="items"></div>
+            <div class="items-footer">
+                <a href=""><img src="https://img.kaidee.com/prd/20250822/370925107/m/8c401494-f2cd-4b8f-a84f-dde826f59711.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250820/370920730/m/5a6ad89a-e1fa-4d6e-bdde-4872e28fd0c2.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250813/370877313/m/c0531e5a-3050-4d73-ba30-63dd2efa5e59.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250819/370744356/m/203ba0ea-95ef-4784-8d97-ad0843c32b11.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250819/370903973/m/4808c796-33f2-47f4-b3d9-be396e86cb66.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250819/370918763/m/3add4b6f-80a9-45aa-8aa8-3e641ad95e36.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250819/370918710/m/758f8d46-6de7-46be-ae94-8daebbc74e0f.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250813/370655880/m/2ef66ec4-f46d-454d-bf67-436de6fa57cd.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250810/370898703/m/62db7660-8a79-4ae8-aa57-6f0e5690205f.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250802/370882822/m/9528fc67-400e-4997-a061-c0de7726c269.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250802/370882818/m/7e2a9a04-dc87-48d6-bd6e-266f64bd02e8.jpg" alt="" class="items-fm"></a>
+                <a href=""><img src="https://img.kaidee.com/prd/20250802/370882814/m/acfbe53c-ac47-4b1c-933e-dddd21475bfa.jpg" alt="" class="items-fm"></a>
+            </div>
         </div>
 
         <div class="footer">
             <h3>ตอบโจทย์ทุกการซื้อ - ขาย ที่ Kaidee</h3>
         </div>
     </div>
+
+    <script src="./Landing Page.js"></script>
 </body>
 </html>
