--- a/Project-ฝึกงาน/Landing Page.html
+++ b/Project-ฝึกงาน/Landing Page.html
@@ -122,14 +122,38 @@
             <p>รวมสินค้า Dee ทั่วไทย ครบครันและหลากหลายที่สุดของประเทศ</p>
         </div>
         <div class="img-items">
-            <a href=""><img src="https://str.cdn.kaidee.com/cate_autos_3x_2778048696.png" class="icon-items" href="" alt="">รถมือสอง</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/cate_motorcycle_3x_b3ba2893e4.png" class="icon-items" href="" alt="">มอเตอร์ไซต์</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/category_amulet_ab94439212.png" class="icon-items" href="" alt="">พระเครื่อง</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/cate_mobiletablet_3x_0fed28334e.png" class="icon-items" href="" alt="">มือถือ แท็บแล็ต</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/condo_3d248568de.png" class="icon-items" href="" alt="">คอนโด</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/usedhome_e9fd5e080a.png" class="icon-items" href="" alt="">บ้านมือสอง</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/townhouse_58941742d1.png" class="icon-items" href="" alt="">ทาวน์เฮ้าส์</a>
-            <a href=""><img src="https://str.cdn.kaidee.com/cate_property_3x_ed4d87b39a.png" class="icon-items" href="" alt="">อสังหาริมทรัพย์</a>
+            <div class="ctn-it">
+                <a href="https://rod.kaidee.com/"><img src="https://str.cdn.kaidee.com/cate_autos_3x_2778048696.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">รถมือสอง</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://www.kaidee.com/mocy"><img src="https://str.cdn.kaidee.com/cate_motorcycle_3x_b3ba2893e4.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">มอเตอร์ไซต์</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://www.kaidee.com/c57-amulet"><img src="https://str.cdn.kaidee.com/category_amulet_ab94439212.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">พระเครื่อง</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://www.kaidee.com/c29-phone_device"><img src="https://str.cdn.kaidee.com/cate_mobiletablet_3x_0fed28334e.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">มือถือ แท็บแล็ต</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://baan.kaidee.com/c17-realestate-condo"><img src="https://str.cdn.kaidee.com/condo_3d248568de.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">คอนโด</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://baan.kaidee.com/c15-realestate-home"><img src="https://str.cdn.kaidee.com/usedhome_e9fd5e080a.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">บ้านมือสอง</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://baan.kaidee.com/c16-realestate-townhouse"><img src="https://str.cdn.kaidee.com/townhouse_58941742d1.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">ทาวน์เฮ้าส์</p>
+            </div>
+            <div class="ctn-it">
+                <a href="https://baan.kaidee.com/c2-realestate"><img src="https://str.cdn.kaidee.com/cate_property_3x_ed4d87b39a.png" class="icon-items" href="" alt=""></a>
+                <p class="titems-m">อสังหาริมทรัพย์</p>
+            </div>
         </div>
 
         <div class="option">
@@ -145,83 +169,84 @@
             </div>
             <div class="items-footer">
                 <div class="product-items">
-                    <img src="https://img.kaidee.com/prd/20250822/370925107/m/8c401494-f2cd-4b8f-a84f-dde826f59711.jpg" alt="" class="items-fm">
-                    <p>Vivo V40 Series 5G</p>
-                    <p>บางบ่อ สมุทรปราการ</p>
-                    <p>฿ 7,900</p>
+                    <a href=""><img src="https://img.kaidee.com/prd/20250822/370925107/m/8c401494-f2cd-4b8f-a84f-dde826f59711.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">Vivo V40 Series 5G</p>
+                    <p class="adr">บางบ่อ สมุทรปราการ</p>
+                    <p class="mo">฿ 7,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250820/370920730/m/5a6ad89a-e1fa-4d6e-bdde-4872e28fd0c2.jpg" alt="" class="items-fm">
-                    <p>iPhone 14 Pro Max 128 GB...</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 21,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250820/370920730/m/5a6ad89a-e1fa-4d6e-bdde-4872e28fd0c2.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPhone 14 Pro Max 128 GB...</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 21,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250813/370877313/m/c0531e5a-3050-4d73-ba30-63dd2efa5e59.jpg" alt="" class="items-fm">
-                    <p>iPhone 15 Pro Max 256 GB...</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 28,500</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250813/370877313/m/c0531e5a-3050-4d73-ba30-63dd2efa5e59.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPhone 15 Pro Max 256 GB...</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 28,500</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250819/370744356/m/203ba0ea-95ef-4784-8d97-ad0843c32b11.jpg" alt="" class="items-fm">
-                    <p>iPhone 14 Pro 128GB⭐️ PE069</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 19,500</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250819/370744356/m/203ba0ea-95ef-4784-8d97-ad0843c32b11.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPhone 14 Pro 128GB⭐️ PE069</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 19,500</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250819/370903973/m/4808c796-33f2-47f4-b3d9-be396e86cb66.jpg" alt="" class="items-fm">
-                    <p>✨iPhone XS Max 256GB รหัสสินค้า PH121</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 8,500</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250819/370903973/m/4808c796-33f2-47f4-b3d9-be396e86cb66.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">✨iPhone XS Max 256GB รหัสสินค้า PH121</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 8,500</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250819/370918763/m/3add4b6f-80a9-45aa-8aa8-3e641ad95e36.jpg" alt="" class="items-fm">
-                    <p>iPad Air 6 11" (M2) Wi-Fi 128 GB⚡️ PD103</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 16,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250819/370918763/m/3add4b6f-80a9-45aa-8aa8-3e641ad95e36.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPad Air 6 11" (M2) Wi-Fi 128 GB⚡️ PD103</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 16,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250819/370918710/m/758f8d46-6de7-46be-ae94-8daebbc74e0f.jpg" alt="" class="items-fm">
-                    <p>iPad Air 5 11" (M1) Wi-Fi 64 GB⚡️ PD112</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 11,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250819/370918710/m/758f8d46-6de7-46be-ae94-8daebbc74e0f.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPad Air 5 11" (M1) Wi-Fi 64 GB⚡️ PD112</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 11,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250813/370655880/m/2ef66ec4-f46d-454d-bf67-436de6fa57cd.jpg" alt="" class="items-fm">
-                    <p>✨iPad Air 5 M1 Wi-Fi 64GB รหัสสินค้า PA076</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 12,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250813/370655880/m/2ef66ec4-f46d-454d-bf67-436de6fa57cd.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">✨iPad Air 5 M1 Wi-Fi 64GB รหัสสินค้า PA076</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 12,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250810/370898703/m/62db7660-8a79-4ae8-aa57-6f0e5690205f.jpg" alt="" class="items-fm">
-                    <p>iPhone 14 Pro Max 128GB⚡️ PE057</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 21,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250810/370898703/m/62db7660-8a79-4ae8-aa57-6f0e5690205f.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPhone 14 Pro Max 128GB⚡️ PE057</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 21,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250802/370882822/m/9528fc67-400e-4997-a061-c0de7726c269.jpg" alt="" class="items-fm">
-                    <p>iPhone 11 128GB🌜PH062</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 11,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250802/370882822/m/9528fc67-400e-4997-a061-c0de7726c269.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">iPhone 11 128GB🌜PH062</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 11,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250802/370882818/m/7e2a9a04-dc87-48d6-bd6e-266f64bd02e8.jpg" alt="" class="items-fm">
-                    <p>Vivo v40 5g สภาพเหมือนใหม่</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 11,900</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250802/370882818/m/7e2a9a04-dc87-48d6-bd6e-266f64bd02e8.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">Vivo v40 5g สภาพเหมือนใหม่</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 11,900</p>
                 </div>
-                <div class="product-items"></div>
-                    <img src="https://img.kaidee.com/prd/20250802/370882814/m/acfbe53c-ac47-4b1c-933e-dddd21475bfa.jpg" alt="" class="items-fm">
-                    <p>16pm256gb มือ1. ขาวกับทอง</p>
-                    <p>บางนา กรุงเทพมหานคร</p>
-                    <p>฿ 11,500</p>
+                <div class="product-items">
+                    <a href=""><img src="https://img.kaidee.com/prd/20250802/370882814/m/acfbe53c-ac47-4b1c-933e-dddd21475bfa.jpg" alt="" class="items-fm"></a>
+                    <p class="title-p">16pm256gb มือ1. ขาวกับทอง</p>
+                    <p class="adr">บางนา กรุงเทพมหานคร</p>
+                    <p class="mo">฿ 11,500</p>
                 </div>
             </div>
         </div>
 
-        <div class="footer">
-            <h3>ตอบโจทย์ทุกการซื้อ - ขาย ที่ Kaidee</h3>
-        </div>
+    </div>
+
+    <div class="footer">
+        <h3>ตอบโจทย์ทุกการซื้อ - ขาย ที่ Kaidee</h3>
     </div>
 
     <script src="./Landing Page.js"></script>
