--- a/Project-ฝึกงาน/Landing Page.html
+++ b/Project-ฝึกงาน/Landing Page.html
@@ -169,7 +169,7 @@
             </div>
             <div class="items-footer">
                 <div class="product-items">
-                    <a href=""><img src="https://img.kaidee.com/prd/20250822/370925107/m/8c401494-f2cd-4b8f-a84f-dde826f59711.jpg" alt="" class="items-fm"></a>
+                    <a href="./prodct-card1.html"><img src="https://img.kaidee.com/prd/20250822/370925107/m/8c401494-f2cd-4b8f-a84f-dde826f59711.jpg" alt="" class="items-fm"></a>
                     <p class="title-p">Vivo V40 Series 5G</p>
                     <p class="adr">บางบ่อ สมุทรปราการ</p>
                     <p class="mo">฿ 7,900</p>
